--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple-like Scroll Effect</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="scroll-container">
@@ -14,7 +14,7 @@
         </section>
         <section class="video-section">
             <video id="background-video" autoplay muted loop>
-                <source src="your-video.mp4" type="video/mp4">
+                <source src="your-video.mp4" type="./images/aaa.mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
@@ -23,6 +23,6 @@
             <p>This is where the content continues after the video transition.</p>
         </section>
     </div>
-    <script src="scripts.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
