--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </section>
         <section class="video-section">
             <video id="background-video" autoplay muted loop>
-                <source src="your-video.mp4" type="./images/aaa.mp4">
+                <source src="./images/aaa.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
