--- a/index.html
+++ b/index.html
@@ -56,18 +56,15 @@
         </div>
        </div>
        <div id="page6">
-        <h3>Design</h3>
-        <h1>Designed by Apple.</h1>
-        <p>Apple Vision Pro is the result of decades of experience designing high‑performance, mobile, and wearable devices — culminating in the most ambitious product Apple has ever created. Vision Pro integrates incredibly advanced technology into an elegant, compact form, resulting in an amazing experience every time you put it on.
-
-            Enclosure. A singular piece of three-dimensionally formed laminated glass flows into an aluminum alloy frame that curves to wrap around your face.
-            Light Seal. The Light Seal</p>
+        <h1>Visual App Interface Layouts</h1>
+        <h3>Owner: Kite Games Studio Ltd.</h3>
+        <p>Time Warp Scan: : Trendy Filter is a fun and creative photo and video editing app that lets users explore the viral time warp effect made popular on social media. With this app, you can capture hilarious and unique moments by freezing the frame as the scan line passes, allowing you to create distorted faces, stretched objects, and other cool visual effects. Perfect for creating trendy content to share with friends, Time Warp Scan is easy to use, offering a number of effects and filters. Unleash your creativity and have fun with this entertaining tool!</p>
        </div>
        <div id="page7">
         <canvas></canvas>
        </div>
        <div id="page8">
-        <h1><span>Enclosure</span> A singular piece of three-dimensionally formed laminated glass flows into an aluminum alloy frame that curves to wrap around your face.</h1>
+        <h1><span>Layouts</span> The app has five main pages, each with different functions: Landing Screen, Editing Screen, Effects Screen, Share Screen, and About Screen. The Editing Screen is the most feature-rich, handling photo and video actions with various sub-tools. The Effects Screen is a key part of the app, focusing on core features.</h1>
        </div>
        <div id="page9">
         <h1><span>Light Seal.</span> The Light Seal gently flexes to conform to your face, delivering a precise fit while blocking out stray light.</h1>
