--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         <h3>Owner: Kite Games Studio Ltd.</h3>
         <p>Time Warp Scan: : Trendy Filter is a fun and creative photo and video editing app that lets users explore the viral time warp effect made popular on social media. With this app, you can capture hilarious and unique moments by freezing the frame as the scan line passes, allowing you to create distorted faces, stretched objects, and other cool visual effects. Perfect for creating trendy content to share with friends, Time Warp Scan is easy to use, offering a number of effects and filters. Unleash your creativity and have fun with this entertaining tool!</p>
        </div>
+
+
        <div id="page7">
         <canvas></canvas>
        </div>
@@ -84,10 +86,11 @@
         <h1>
             <span>EyeSight.</span> An outward display reveals your eyes while wearing Vision Pro, letting others know when you are using apps or fully immersed.</h1>
        </div>
-       <div id="page14">
-        <div class="left14"></div>
-        <div class="right14"></div>
+
+       <div id="page7">
+        <canvas></canvas>
        </div>
+
        <div id="page15">
         <div id="center-page15">
             <video src="https://www.apple.com//105/media/us/apple-vision-pro/2023/7e268c13-eb22-493d-a860-f0637bacb569/anim/glass/large_2x.mp4" autoplay loop muted ></video>
